Fleet UI: Fix link, info banner spacing, certificates modal padding (#33637)

--- a/frontend/styles/global/_global.scss
+++ b/frontend/styles/global/_global.scss
@@ -239,6 +239,7 @@ hr {
 }
 
 dl {
+  @include vertical-data-set-layout;
   margin: 0;
   padding: 0;
 }
